<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <HorizontalScrollView
        android:id="@+id/selector"
        android:layout_width="wrap_content"
        android:background="@drawable/background"
        android:layout_height="120dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:scrollbars="none">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/headlines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/category_shape"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/baseline_format_align_center_black_48dp">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:layout_gravity="center"
            android:text="@string/headlines"
            android:textSize="15sp"
            android:textColor="#fff">
        </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/category_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/baseline_sports_cricket_black_48">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:text="@string/sports"
                android:textSize="15sp"
                android:textColor="#fff">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/category_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/baseline_movie_black_48dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:text="@string/entertainment"
                android:textSize="15sp"
                android:textColor="#fff">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/category_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/baseline_public_black_48dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:text="@string/global"
                android:textSize="15sp"
                android:textColor="#fff">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/category_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/baseline_business_center_black_48dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:text="@string/business"
                android:textSize="15sp"
                android:textColor="#fff">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/category_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/baseline_local_hospital_black_48dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:text="@string/health"
                android:textSize="15sp"
                android:textColor="#fff">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/category_shape"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/baseline_how_to_vote_black_48dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_gravity="center"
                android:text="@string/politics"
                android:textSize="15sp"
                android:textColor="#fff">
            </TextView>
        </LinearLayout>

    </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#230f23"
        android:paddingBottom="4dp"
        android:layout_below="@id/selector"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#CCCC00"
        android:text="@string/top_headlines"
        android:textAllCaps="true">
    </TextView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/category_title">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item"
        android:layout_below="@id/category_title"
        android:background="#3e1b3e">
    </androidx.recyclerview.widget.RecyclerView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="#D3D3D3"
        android:scaleType="centerCrop"
        android:src="@drawable/no" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_centerInParent="true">
    </ProgressBar>

</RelativeLayout>